# nrc_software

./: .gitignore  LICENSE  README.md  encoder.ino  findhsv.py  jsonserial.py  opencv1.py  practicebot.ino  vision.py
firmware/drivetrain/: drivetrain.ino
firmware/drivetrain/test/: test_drivetrain.py
nrc_ws/src/localization/: CMakeLists.txt  package.xml
nrc_ws/src/localization/launch/: localization_sim.launch
nrc_ws/src/localization/src/: localization.py
nrc_ws/src/nrc_ekf/: CMakeLists.txt  package.xml
nrc_ws/src/nrc_ekf/src/: ekf.cpp  nrc_ekf_node.cpp
nrc_ws/src/nrc_localization/: CMakeLists.txt  package.xml
nrc_ws/src/nrc_localization/launch/: localization_sim.launch
nrc_ws/src/nrc_localization/src/: localization.py  nrc_localization.py
nrc_ws/src/nrc_msgs/: CMakeLists.txt  package.xml
nrc_ws/src/nrc_msgs/msg/: DriveCommand.msg  DriveStatus.msg  NodeVector.msg
nrc_ws/src/nrc_nav/: CMakeLists.txt  package.xml
nrc_ws/src/nrc_nav/launch/: drive_dr_sim.launch  drive_pp_sim.launch  drive_sim.launch
nrc_ws/src/nrc_nav/src/: igvc_pure_pursuit.py  nrc_drive_dr.py  nrc_drive_pp.py  output_traj.csv  pp_viewer.py  pure_pursuit.py  sim_output.py
nrc_ws/src/nrc_serial/: CMakeLists.txt  package.xml
nrc_ws/src/nrc_serial/launch/: drive_pp_serial.launch  (+1 more)
nrc_ws/src/nrc_vision/: CMakeLists.txt  package.xml
prototype_drive/: prototype_drive.ino
setup/: setup.sh
setup/systemd/: nrc.service  nrc_start.sh
trajectory_gen/: .~lock.output_traj.csv#  config.json  config_fullpath.json  main.py  output_traj.csv  segment.py  trajectory_point.py
(+7 files in other folders)
